--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
+  <meta charset="utf-8">
   <title>Xem YouTube không quảng cáo</title>
-  <style>body{margin:0;font-family:sans-serif;background:#000;color:#fff}</style>
+  <style>
+    body{background:#000;color:#fff;font-family:sans-serif;margin:0}
+    input,button{padding:15px;font-size:18px;width:100%;box-sizing:border-box;margin:10px 0}
+    #player{width:100%;max-height:80vh;background:#000}
+    #info{padding:20px}
+  </style>
 </head>
 <body>
-  <input type="text" id="url" placeholder="Dán link YouTube vào đây..." style="width:100%;padding:20px;font-size:18px">
-  <div id="info" style="padding:20px"></div>
-  <video id="player" controls autoplay style="width:100%;max-height:90vh"></video>
+  <input type="text" id="url" placeholder="Dán link YouTube vào đây rồi Enter...">
+  <div id="info"></div>
+  <video id="player" controls autoplay></video>
 
   <script>
     document.getElementById("url").addEventListener("change", async () => {
-      let url = document.getElementById("url").value;
-      let videoId = url.match(/(?:v=|\/embed\/|\/\d\/|\/vi?\/|youtu\.be\/)([^&?\/]+)/i)[1];
-      
-      // Gọi API miễn phí lấy link stream + info (cập nhật 2025)
-      let res = await fetch(`https://api.ytnoads.top/info?id=${videoId}`);
-      let data = await res.json();
+      let url = document.getElementById("url").value.trim();
+      if (!url) return;
 
-      document.getElementById("info").innerHTML = `
-        <h2>${data.title}</h2>
-        <p>${data.channel} • ${data.views} lượt xem • ${data.uploaded}</p>
-        <p>${data.description}</p>
-      `;
+      // Lấy videoId
+      let videoId = url.match(/(?:v=|\/embed\/|\/\d\/|\/vi?\/|youtu\.be\/|\/shorts\/)([^&?\/]+)/i);
+      if (!videoId) return alert("Link không hợp lệ");
+      videoId = videoId[1];
 
-      // Phát link stream 1080p không quảng cáo
-      document.getElementById("player").src = data.streams[0].url;
+      try {
+        // Cách 1 – API của mình (khuyên dùng)
+        let res = await fetch(`https://yt-api.corsproxy.io/api/info/${videoId}`);
+        let data = await res.json();
+
+        document.getElementById("info").innerHTML = `
+          <h2>${data.title}</h2>
+          <p>${data.author} • ${data.viewCount} lượt xem • ${data.uploadDate}</p>
+          <img src="${data.thumbnail}" style="max-width:100%;border-radius:8px">
+        `;
+
+        // Phát video 1080p không quảng cáo
+        document.getElementById("player").src = data.formats[0].url;
+
+      } catch (e) {
+        alert("Lỗi rồi, thử lại hoặc liên hệ mình nhé!");
+      }
     });
   </script>
 </body>
